# rbuilder

./: Cargo.toml  Dockerfile  Makefile  config-live-example.toml  config-optimism-local.toml
.github/: CODEOWNERS
.github/workflows/: checks.yaml  checks_docker.yaml  release.yaml
crates/eth-sparse-mpt/: Cargo.toml
crates/eth-sparse-mpt/benches/: trie_insert_bench.rs  trie_nodes_benches.rs
crates/eth-sparse-mpt/src/: lib.rs  utils.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/: hash.rs  mod.rs  shared_cache.rs
crates/eth-sparse-mpt/src/reth_sparse_trie/trie_fetcher/: mod.rs
crates/eth-sparse-mpt/src/sparse_mpt/: fixed_trie.rs
crates/eth-sparse-mpt/src/sparse_mpt/diff_trie/: mod.rs  tests.rs
crates/rbuilder/: Cargo.toml
crates/rbuilder/benches/benchmarks/: mev_boost.rs
crates/rbuilder/src/: validation_api_client.rs
crates/rbuilder/src/backtest/: execute.rs  mod.rs  store.rs
crates/rbuilder/src/backtest/fetch/: flashbots_db.rs  mempool.rs  mod.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs
crates/rbuilder/src/backtest/redistribute/cli/: csv_output.rs  mod.rs
crates/rbuilder/src/backtest/restore_landed_orders/: find_landed_orders.rs  resim_landed_block.rs
crates/rbuilder/src/beacon_api_client/: mod.rs
crates/rbuilder/src/building/: built_block_trace.rs  conflict.rs  evm_inspector.rs  mod.rs  order_commit.rs  payout_tx.rs  sim.rs
crates/rbuilder/src/building/block_orders/: mod.rs  multi_share_bundle_merger.rs  test_context.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  bob_builder.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs
crates/rbuilder/src/building/builders/parallel_builder/: block_building_result_assembler.rs  conflict_resolvers.rs  conflict_resolving_pool.rs  conflict_task_generator.rs  groups.rs  mod.rs  simulation_cache.rs
crates/rbuilder/src/building/testing/: test_chain_state.rs
crates/rbuilder/src/building/testing/bundle_tests/: mod.rs  setup.rs
crates/rbuilder/src/building/testing/evm_inspector_tests/: setup.rs
crates/rbuilder/src/integration/: playground.rs  simple.rs
crates/rbuilder/src/live_builder/: base_config.rs  cli.rs  config.rs  mod.rs
crates/rbuilder/src/live_builder/block_output/: block_router.rs  block_sealing_bidder_factory.rs  relay_submit.rs
crates/rbuilder/src/live_builder/block_output/bid_value_source/: best_bid_sync_source.rs
crates/rbuilder/src/live_builder/block_output/bidding/: interfaces.rs  parallel_sealer_bid_maker.rs  sequential_sealer_bid_maker.rs  wallet_balance_watcher.rs
crates/rbuilder/src/live_builder/building/: mod.rs
crates/rbuilder/src/live_builder/order_input/: clean_orderpool.rs  mod.rs  orderpool.rs  rpc_server.rs  txpool_fetcher.rs
crates/rbuilder/src/live_builder/payload_events/: mod.rs  payload_source.rs
crates/rbuilder/src/live_builder/simulation/: mod.rs  sim_worker.rs
crates/rbuilder/src/live_builder/streaming/: block_subscription_server.rs  mod.rs
crates/rbuilder/src/mev_boost/: error.rs  mod.rs  rpc.rs  sign_payload.rs
crates/rbuilder/src/primitives/: fmt.rs  mod.rs  serialize.rs  test_data_generator.rs
crates/rbuilder/src/roothash/: mod.rs  prefetcher.rs
crates/rbuilder/src/telemetry/: dynamic_logs.rs  metrics.rs
crates/rbuilder/src/utils/: error_storage.rs  mod.rs  noncer.rs  provider_factory_reopen.rs  test_utils.rs  tx_signer.rs
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
docs/: LIVEBUILDER_DATAFLOW.md
