[workspace]
members = [
    "crates/rbuilder",
    "crates/op-rbuilder",
    "crates/op-rbuilder/payload_builder",
    "crates/op-rbuilder/node",
    "crates/reth-rbuilder",
    "crates/rbuilder/src/test_utils",
    "crates/rbuilder/src/telemetry/metrics_macros",
    "crates/transaction-pool-bundle-ext",
    "crates/transaction-pool-bundle-ext/bundle_pool_ops/rbuilder",
    "crates/eth-sparse-mpt"
]
default-members = ["crates/rbuilder", "crates/reth-rbuilder"]
resolver = "2"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-rpc-api-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.1" }

# version is copied from reth  "v1.1.1" dependencies
revm = { version = "17.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-inspectors = "0.10.0"
revm-primitives = { version = "13.0.0", features = [
    "std",
], default-features = false }

ethereum_ssz_derive = "0.8"
ethereum_ssz = "0.8"

alloy-primitives = { version = "0.8.9", default-features = false }
alloy-rlp = "0.3.4"
alloy-chains = "0.1.33"
alloy-provider = { version = "0.5.4", features = ["ipc", "pubsub"] }
alloy-pubsub = { version = "0.5.4" }
alloy-eips = { version = "0.5.4" }
alloy-rpc-types = { version = "0.5.4" }
alloy-json-rpc = { version = "0.5.4" }
alloy-transport-http = { version = "0.5.4" }
alloy-network = { version = "0.5.4" }
alloy-transport = { version = "0.5.4" }
alloy-node-bindings = { version = "0.5.4" }
alloy-consensus = { version = "0.5.4", features = ["kzg"] }
op-alloy-consensus = { version = "0.5.2", features = ["kzg"] }
alloy-serde = { version = "0.5.4" }
alloy-rpc-types-beacon = { version = "0.5.4", features = [
    "ssz",
] }
alloy-rpc-types-engine = { version = "0.5.4", features = [
    "ssz",
] }
alloy-rpc-types-eth = { version = "0.5.4" }
alloy-signer-local = { version = "0.5.4" }
alloy-genesis = { version = "0.5.4" }
alloy-trie = { version = "0.7" }


async-trait = { version = "0.1.83" }
clap = { version = "4.4.3" }
thiserror = { version = "1.0.64" }
eyre = { version = "0.6.12" }
jsonrpsee = { version = "0.24.4" }
jsonrpsee-types = { version = "0.24.4" }
parking_lot = { version = "0.12.3" }
tokio = { version = "1.40.0" }
auto_impl = { version = "1.2.0" }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
clap_builder = { version = "4.5.19" }
derive_more = { version = "1" }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
url = "2.5.2"

libc = { version = "0.2.161" }
tikv-jemallocator = { version = "0.6" }
tracing = "0.1.37"


eth-sparse-mpt = { path = "crates/eth-sparse-mpt" }
